<resources>
    <string name="app_name">Tips</string>
    <string name="title_login">SIGN IN</string>
    <string name="title_profile">PROFILE</string>
    <string name="my_continue">CONTINUE</string>
    <string name="password">Password</string>
    <string name="read_more">READ MORE</string>
    <string name="tips_personal">Tips - personal bonus and reward system \nfor salesman</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_registered_yet">NOT REGISTERED YET ?</string>
    <string name="app_name_to_upper_case">TIPS</string>
    <string name="valid_phone">Please provide valid phone number</string>
    <string name="valid_password">Password should have at list 6 symbols</string>
    <string name="error_network">You\'re offline. Check your connection</string>
    <string name="error_auth">Authorisation failure</string>
    <string name="error_not_cheked">An Error occurs, please try later</string>
    <string name="retry">Retry</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
</resources>
